src/test/ui/issues/issue-46771.stderr
error[E0618]: expected function, found `main::Foo`
  --> $DIR/issue-46771.rs:3:23
   |
LL |     struct Foo;
   |     ----------- `main::Foo` defined here
LL |     (1 .. 2).find(|_| Foo(0) == 0);
   |                       ^^^---
   |                       |
   |                       call expression requires function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0618`.
